# squashvid

./: .gitignore  Dockerfile  Procfile  README.md  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  start.py
squashvid/: .dockerignore  Dockerfile  __init__.py  api.py  cli.py  requirements.txt  schemas.py
squashvid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
squashvid/.claude/skills/: refresh-youtube-cookies.md
squashvid/pipeline/: __init__.py  events.py  llm.py  models.py  orchestrator.py  preprocess.py  video_source.py  vision.py
squashvid/static/: index.html
squashvid/static/css/: app.css
squashvid/static/js/: app.js
tests/: test_api_ui.py  test_events.py  test_llm.py  test_orchestrator.py  test_preprocess.py  test_video_source.py  test_vision.py
